k8s/platform/root/argocd-server-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argo.opsguy.io
      secretName: argocd-ingress-tls
  rules:
    - host: argo.opsguy.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
